# aviation-monitor

./: Aircraft_Safety_Monitor_Presentation.pptx  README.md  aircraft_video_analysis.py  main.py  pyproject.toml  requirements.txt
