[project]
name = "aviation-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.9",
    "langchain-openai>=1.1.7",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "reportlab>=4.4.9",
    "streamlit>=1.54.0",
]
